--- a/src/views/transfer.ejs
+++ b/src/views/transfer.ejs
@@ -7,14 +7,14 @@
   <% } %>
   <span class="error"></span>
 
-  <form id="transferForm">
+  <form id="transferForm" actioni="/transfer" method="post">
     <span>Transfer From: </span> 
-    <select required>
+    <select required id="from" name="from">
       <option value="checking">Checking</option>
       <option value="savings">Savings</option>
     </select>
     <span> to: </span>
-    <select required>
+    <select required name="to" id="to">
       <option value="checking">Checking</option>
       <option value="savings">Savings</option>
     </select>
