--- a/src/views/transfer.ejs
+++ b/src/views/transfer.ejs
@@ -7,7 +7,7 @@
   <% } %>
   <span class="error"></span>
 
-  <form id="transferForm" actioni="/transfer" method="post">
+  <form id="transferForm" action="/transfer" method="post">
     <span>Transfer From: </span> 
     <select required id="from" name="from">
       <option value="checking">Checking</option>
